# json-helpers

./: .gitmodules  pyproject.toml  readme.md
lib/json/: make_jsonable.py  manager.py  pyproject.toml
src/json_helpers/: __init__.py  helpers.py  make_jsonable.py
