[project]
name = "json-helpers"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
    "mypy>=1.19.1",
]


[tool.isort]
profile = "black"
extend_skip_glob = []
skip_gitignore = true
line_length = 120
atomic = true
lines_after_imports = 2
combine_as_imports = true
force_sort_within_sections = true
color_output = true


[tool.black]
line-length = 120
extend-exclude = '''
(
  .venv
)
'''


[tool.setuptools.dynamic]
version = {attr = "json_helpers.__version__"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
